# alice

./: .gitignore  README.md  flake.nix  flutter_rust_bridge.yaml  pubspec.yaml  shell.nix
.github/workflows/: release.yml
assets/config/: default_config.yaml
doc/: design.md
lib/: alice_config.dart  alice_platform.dart  alice_theme.dart  app.dart  main.dart  panel_controller.dart
lib/data/: bar_snapshot.dart
lib/models/: alice_config.dart  bar_snapshot.dart
lib/rust_gen/: api.dart  config.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  state.dart
lib/services/config/: default_config_template.dart
lib/services/platform/: alice_platform.dart  channel_names.dart  method_channel_alice_platform.dart  mock_alice_platform.dart
lib/state/: panel_controller.dart
lib/theme/: alice_theme.dart
lib/widgets/: top_bar.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  alice_application.cc  alice_application.h  alice_layer_shell_bridge.h  alice_platform_bridge.h  main.cc  my_application.cc
native/: Cargo.toml
native/alice_layer_shell/: Cargo.toml
native/alice_platform/: Cargo.toml
native/alice_platform/src/: api.rs  clock.rs  config.rs  frb_generated.rs  lib.rs  mpris.rs  network.rs  providers.rs  runtime.rs  state.rs  stats.rs  sway.rs  tray.rs
nix/: package.nix  pubspec.lock.json
packaging/: alicebar.sh  build-deb.sh  docker-test-packaging.sh
packaging/arch/: PKGBUILD
packaging/deb/: changelog  control  copyright  rules
packaging/debian/: control  rules
packaging/fedora/: alicebar.spec
(+24 files in other folders)
