[package]
name = "alice_platform"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
notify = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
chrono = { version = "0.4.44", features = ["clock"] }
chrono-tz = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
swayipc = "4.0.0"
zbus = { version = "5.14.0", features = ["blocking"] }
